--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Photography Website</title>
 </head>
 <body>
-    
+    <div class="nav_container">
+        <div class="socials">
+            <ul>
+                <li><a href="#"><i class="fa fa-linkedin" style="font-size:24px"></i></a></li>
+                <li><a href="#"><i class="fa fa-telegram" style="font-size:24px"></i></a></li>
+            </ul>
+        </div>
+        <div class="nav_links">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
