Successfully positioned the logo and nav links in the navigation branch

--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+    </style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,600&display=swap');
+    </style>
+        
     <link rel="stylesheet" href="style.css">
     <title>Photography Website</title>
 </head>
 <body>
     <div class="nav_container">
-        <div class="socials">
-            <ul>
-                <li><a href="#"><i class="fa fa-linkedin" style="font-size:24px"></i></a></li>
-                <li><a href="#"><i class="fa fa-telegram" style="font-size:24px"></i></a></li>
-            </ul>
+        <div class="logo">
+            <h1>Marcos Photography</h1>
         </div>
         <div class="nav_links">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#">Biography</a></li>
                 <li><a href="#">Work</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
