Modified both files by adding an active class in the html and styling the hover effects in the css file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="nav_links">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a class="active" href="#">Home</a></li>
                 <li><a href="#">Biography</a></li>
                 <li><a href="#">Work</a></li>
                 <li><a href="#">Contacts</a></li>
