Positioning the navigation links at different breakpoints

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                 <li><a href="#">Contacts</a></li>
             </ul>
         </div>
+        <!-- humberger -->
+        <input type="checkbox" id="check">
+                <label for="check" class="check_btn">
+                    <i class="fa fa-bars"></i>
+                </label>
+       <!-- End of humberger -->
     </div>
 </body>
 </html>
