Modified both files, added some elements for the html and an image background for the css file

--- a/index.html
+++ b/index.html
@@ -35,5 +35,14 @@
          </label>
        <!-- End of humberger -->
     </div>
+    <!-- Hero section -->
+    <div class="hero_container">
+        <h3>We love</h3>
+        <h1>Photography</h1>
+        <p>Since 2009, Based in Nairobi Kenya</p>
+        <button>Get started</button>
+
+    </div>
+    <!-- End of Hero section -->
 </body>
 </html>
