Modified both files by adding a footer in the home page with respective styles

--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
     <!-- Hero section -->
     <div class="hero_container">
         <h3>We love</h3>
-        <h1>Photography</h1>
+        <h1 class="photo">Photography</h1>
         <p>Since 2009, Based in Nairobi Kenya</p>
         <button>Get started</button>
 
     </div>
     <!-- End of Hero section -->
+    <div class="footer">
+        <p>@Copyright All Rights Reserved</p>
+    </div>
 </body>
 </html>
