Modified both files from the master branch

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,600&display=swap');
     </style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');
+    </style>
         
     <link rel="stylesheet" href="style.css">
     <title>Photography Website</title>
