Added an about page in the index.html

--- a/index.html
+++ b/index.html
@@ -44,9 +44,23 @@
         <h1 class="photo">Photo<span>g</span>raphy</h1>
         <p>Since 2009, Based in Nairobi Kenya</p>
         <button>Get started</button>
-
     </div>
     <!-- End of Hero section -->
+    <!-- About section -->
+    <div class="about_container">
+        <div class="about_pic">
+            <img src="./images/Img1.jpg" alt="my Image">
+        </div>
+        <div class="about_info">
+            <h1>A photographer based out of Nairobi, who loves to click, cook and travel</h1>
+             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste, pariatur. 
+                 Tenetur est minima recusandae, rerum amet illum, ut dolorem porro hic 
+                 dignissimos ipsa laudantium consectetur cupiditate expedita dolor. Culpa, ab.
+             </p>
+                 <button>Get in touch</button>
+        </div>
+    </div>
+    <!-- End of About section -->
     <div class="footer">
         <p>@Copyright All Rights Reserved</p>
     </div>
