Added personal information in the about page and included more styles in the css file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');
     </style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Birthstone&display=swap');
+    </style>
         
     <link rel="stylesheet" href="style.css">
     <title>Photography Website</title>
@@ -46,7 +49,12 @@
         <button>Get started</button>
     </div>
     <!-- End of Hero section -->
+    <span class="space"></span>
     <!-- About section -->
+    <div class="about_title">
+        <h1>Biography</h1>
+        <div class="underline"></div>
+    </div>
     <div class="about_container">
         <div class="about_pic">
             <img src="./images/Img1.jpg" alt="my Image">
