Added the portfolio page displaying my recent work

--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
     <div class="hero_container">
         <h3>We love</h3>
         <h1 class="photo">Photo<span>g</span>raphy</h1>
-        <p>Since 2009, Based in Nairobi Kenya</p>
+        <p>Since 2009, Based in Nairobi Kenya.</p>
         <button>Get started</button>
     </div>
     <!-- End of Hero section -->
     <span class="space"></span>
     <!-- About section -->
     <div class="about_title">
-        <h1>Biography</h1>
+        <h1>Biog<span class="r">r</span>aphy</h1>
         <div class="underline"></div>
     </div>
     <div class="about_container">
         <div class="about_pic">
-            <img src="./images/Img1.jpg" alt="my Image">
+            <img src="./images/img2.jpg" alt="my Image">
         </div>
         <div class="about_info">
             <h1>A photographer based out of Nairobi, who loves to click, cook and travel</h1>
@@ -67,6 +67,24 @@
              </p>
                  <button>Get in touch</button>
         </div>
+    </div>
+    <div class="portfolio_title">
+        <h1>My Por<span class="r">t</span>folio</h1>
+        <div class="underline"></div>
+    </div>
+    <div class="portfolio_container">
+            <img src="./images/Img3.jpeg" alt="portfolio">
+            <img src="./images/Img1.jpg" alt="portfolio">
+            <img src="./images/Img1.jpg" alt="portfolio">
+            <img src="./images/Img1.jpg" alt="portfolio">
+            <img src="./images/Img1.jpg" alt="portfolio">
+            <img src="./images/Img1.jpg" alt="portfolio">
+            <img src="./images/Img1.jpg" alt="portfolio">
+            <img src="./images/Img1.jpg" alt="portfolio">
+            <img src="./images/Img1.jpg" alt="portfolio">
+            <img src="./images/Img1.jpg" alt="portfolio">
+            <img src="./images/Img1.jpg" alt="portfolio">
+            <img src="./images/Img1.jpg" alt="portfolio">
     </div>
     <!-- End of About section -->
     <div class="footer">
