Added a contact section with an additional image for the section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
         <h1>My Por<span class="r">t</span>folio</h1>
         <div class="underline"></div>
     </div>
+    <!-- End of About section -->
+    <!-- Portfolio section -->
     <div class="portfolio_container">
             <img src="./images/Img3.jpeg" alt="portfolio">
             <img src="./images/Img4.jpeg" alt="portfolio">
@@ -85,7 +87,12 @@
             <img src="./images/Img13.jpeg" alt="portfolio">
             <img src="./images/Img14.jpeg" alt="portfolio">
     </div>
-    <!-- End of About section -->
+    <!-- End of portfolio section -->
+    <!-- Contact section -->
+    <div class="contact_container">
+        
+    </div>
+    <!-- End of portfolio section -->
     <div class="footer">
         <p>@Copyright All Rights Reserved</p>
     </div>
