Added an Image and a contact form in the contact section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,15 @@
     <!-- End of portfolio section -->
     <!-- Contact section -->
     <div class="contact_container">
-        
+        <div class="contact_img">
+            <img src="./images/Img15.jpeg" alt="img">
+        </div>
+        <div class="contacts">
+            <input type="text" placeholder="Name">
+            <input type="text" placeholder="Email">
+            <input type="text" placeholder="Subject">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+        </div>
     </div>
     <!-- End of portfolio section -->
     <div class="footer">
