Added some alignments to the contact section

--- a/index.html
+++ b/index.html
@@ -94,10 +94,13 @@
             <img src="./images/Img15.jpeg" alt="img">
         </div>
         <div class="contacts">
+            <h1>Get In Touch</h1>
+            <p>If you would like to work with me, please give me a call at +254 702854204 or just send an email to marcos.otieno@student.moringaschool.com</p>
             <input type="text" placeholder="Name">
             <input type="text" placeholder="Email">
             <input type="text" placeholder="Subject">
             <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+            <button>Submit</button>
         </div>
     </div>
     <!-- End of portfolio section -->
