Successfully positioned items in the contact section using flex-box

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <div class="portfolio_title">
-        <h1>My Por<span class="r">t</span>folio</h1>
+        <h1>My <span class="r">W</span>o<span class="r">r</span>k</h1>
         <div class="underline"></div>
     </div>
     <!-- End of About section -->
