Added the responsiveness of the contact section at respective breakpoints

--- a/index.html
+++ b/index.html
@@ -89,9 +89,13 @@
     </div>
     <!-- End of portfolio section -->
     <!-- Contact section -->
+    <div class="contact_title">
+        <h1>Con<span class="r">t</span>act <span class="r">M</span>e</h1>
+        <div class="underline"></div>
+    </div>
     <div class="contact_container">
         <div class="contact_img">
-            <img src="./images/Img15.jpeg" alt="img">
+            <img src="./images/Img18.jpeg" alt="img">
         </div>
         <div class="contacts">
             <h1>Get In Touch</h1>
