Directed the links to their respective destinations

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         </div>
         <div class="nav_links">
             <ul>
-                <li><a class="active" href="#">Home</a></li>
-                <li><a href="#">Biography</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a class="active" href="#home">Home</a></li>
+                <li><a href="#biography">Biography</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact">Contacts</a></li>
             </ul>
         </div>
         <!-- humberger -->
@@ -42,7 +42,7 @@
        <!-- End of humberger -->
     </div>
     <!-- Hero section -->
-    <div class="hero_container">
+    <div id="home" class="hero_container">
         <h3>We love</h3>
         <h1 class="photo">Photo<span>g</span>raphy</h1>
         <p>Since 2009, Based in Nairobi Kenya.</p>
@@ -50,7 +50,7 @@
     </div>
     <!-- End of Hero section -->
     <!-- About section -->
-    <div class="about_title">
+    <div id="biography" class="about_title">
         <h1>Biog<span class="r">r</span>aphy</h1>
         <div class="underline"></div>
     </div>
@@ -60,14 +60,16 @@
         </div>
         <div class="about_info">
             <h1>A photographer based out of Nairobi, who loves to click, cook and travel</h1>
-             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste, pariatur. 
-                 Tenetur est minima recusandae, rerum amet illum, ut dolorem porro hic 
-                 dignissimos ipsa laudantium consectetur cupiditate expedita dolor. Culpa, ab.
+             <p>In need of quality photos, look no further! I am here to exceed your expectations.
+                 I am a passionate and highly motivated individual whose work comes first and above all,
+                 puts the needs of my clients above my personal. With more than seven years of experience
+                  in the field, I not only bring my expertise but also see to it that you end up never 
+                  regreting choosing to work with me.
              </p>
-                 <button>Get in touch</button>
+                 <a href="#contact"><button>Get In Touch</button></a>
         </div>
     </div>
-    <div class="portfolio_title">
+    <div id="work" class="portfolio_title">
         <h1>My <span class="r">W</span>o<span class="r">r</span>k</h1>
         <div class="underline"></div>
     </div>
@@ -89,7 +91,7 @@
     </div>
     <!-- End of portfolio section -->
     <!-- Contact section -->
-    <div class="contact_title">
+    <div id="contact" class="contact_title">
         <h1>Con<span class="r">t</span>act <span class="r">M</span>e</h1>
         <div class="underline"></div>
     </div>
