--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <ul>
                 <li><a class="active" href="#home">Home</a></li>
                 <li><a href="#biography">Biography</a></li>
+                <li><a href="#work">Team</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact">Contacts</a></li>
             </ul>
@@ -114,7 +115,8 @@
         <iframe style="width: 100%; height: 300px; border: none;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.7906185174775!2d36.7824180143053!3d-1.3004808360075264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1a6bf7445dc1%3A0x940b62a3c8efde4c!2sMoringa%20School!5e0!3m2!1sen!2ske!4v1632577566593!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
     <div class="footer">
-        <p>@Copyright All Rights Reserved</p>
+        <p>@Copyright All Rights Reserved</p><br>
+        <p>Designed by <span class="name"><a target="_blank" href="https://marcosochieng.netlify.app/">Marcos Ochieng</a></span></p>
     </div>
 </body>
 </html>
