Edited the link in the footer to the desired destination in my whatsapp inbox

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </div>
     <div class="footer">
         <p>@Copyright All Rights Reserved</p><br>
-        <p>Designed by <span class="name"><a target="_blank" href="https://marcosochieng.netlify.app/">Marcos Ochieng</a></span></p>
+        <p>Designed by <span class="name"><a target="_blank" href="https://api.whatsapp.com/send?phone=+254702854204&text=Thanks%20for%20reaching%20out%20to%20me"">Marcos Ochieng</a></span></p>
     </div>
 </body>
 </html>
