Renamed the title in the about page to achieve relevance

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- End of Hero section -->
     <!-- About section -->
     <div id="biography" class="about_title">
-        <h1>Biog<span class="r">r</span>aphy</h1>
+        <h1>Abo<span class="r">u</span>t <span class="r">M</span>e</h1>
         <div class="underline"></div>
     </div>
     <div class="about_container">
