Renamed the about page in the navbar from biography to achieve matching names in the website

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="nav_links">
             <ul>
                 <li><a class="active" href="#home">Home</a></li>
-                <li><a href="#biography">Biography</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#work">Team</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact">Contacts</a></li>
@@ -51,7 +51,7 @@
     </div>
     <!-- End of Hero section -->
     <!-- About section -->
-    <div id="biography" class="about_title">
+    <div id="about" class="about_title">
         <h1>Abo<span class="r">u</span>t <span class="r">M</span>e</h1>
         <div class="underline"></div>
     </div>
