Added four new images in the image folder for the Team section

--- a/index.html
+++ b/index.html
@@ -91,6 +91,30 @@
             <img src="./images/Img14.jpeg" alt="portfolio">
     </div>
     <!-- End of portfolio section -->
+    <!-- Team section -->
+    <div class="team_container">
+        <div>
+          <img src="./images/Img19.jpg" alt="img">
+          <h3>Marcos Ochieng</h3>
+          <p>Chief Executive Officer</p>
+        </div>
+        <div>
+          <img src="./images/Img20.jpg" alt="img">
+          <h3>Michelle Akinyi</h3>
+          <p>Product Manager</p>
+        </div>
+        <div>
+          <img src="./images/Img21.jpg" alt="img">
+          <h3>Jasper Okora</h3>
+          <p>CTO</p>
+        </div>
+        <div>
+          <img src="./images/Img22.jpg" alt="img">
+          <h3>Ann Kabz</h3>
+          <p>Accountant</p>
+        </div>
+    </div>
+    <!-- End of team section -->
     <!-- Contact section -->
     <div id="contact" class="contact_title">
         <h1>Con<span class="r">t</span>act <span class="r">M</span>e</h1>
