Added a title for the team section then subsequently styled it

--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
     </div>
     <!-- End of portfolio section -->
     <!-- Team section -->
+    <div class="team_title1">
+        <h2>Check <span class="r">our</span> Team</h2>
+        <div class="underline"></div>
+    </div>
     <div class="team_container">
         <div>
           <img src="./images/Img19.jpg" alt="img">
