Working on the responsiveness of the navbar on small screens

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/65973ea7f6.js" crossorigin="anonymous"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
     </style>
@@ -38,7 +38,7 @@
         <!-- humberger -->
         <input type="checkbox" id="check">
          <label for="check" class="check_btn">
-             <i class="fa fa-bars"></i>
+            <i class="fas fa-bars" id="btn"></i>
          </label>
        <!-- End of humberger -->
     </div>
