Made some few changes and additions about myself in the about page

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <div class="about_info">
             <h1>A photographer based out of Nairobi, who loves to click, cook and travel</h1>
             <p>I’ve been working as a professional photographer all my adult life. Right after
-                 my graduation, MA I began doing my gigs.
-                  After first few years of working for an event agency and with dozens of beautiful wedding sets
-                  in my portfolio, I decided to give it a go and opened up my very own wedding photography service.</p>
+                 my graduation,I began doing my gigs.
+                  After first few years of working for an event agency and with dozens of beautiful sets
+                  in my portfolio, I decided to give it a go and opened up my very own photography service.</p>
              <p>In need of quality photos, look no further! I am here to exceed your expectations.
                  I am a passionate and highly motivated individual whose work comes first and above all,
                  puts the needs of my clients above my personal. With more than seven years of experience
